# lipid-egui

./: Cargo.toml  README.adoc
src/: lib.rs
src/fatty_acid/: mod.rs  names.rs
