[package]
name = "lipid-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31.0", default-features = false }
egui = { version = "0.31.0", default-features = false }
lipid = { git = "https://github.com/ippras/lipid" }
egui-phosphor = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
